--- a/Client/GroApp/res/values/strings.xml
+++ b/Client/GroApp/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Login</string>
+    <string name="title_activity_shopping_list">ShoppingList</string>
+    <string name="title_activity_recipe">Recipe</string>
 
 </resources>
